--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/stack": "^6.1.1",
     "react": "17.0.2",
-    "react-native": "0.67.2"
+    "react-native": "0.67.2",
+    "react-native-gesture-handler": "^2.3.2",
+    "react-native-paper": "^4.11.2",
+    "react-native-safe-area-context": "^4.2.2",
+    "react-native-screens": "^3.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
@@ -27,6 +33,8 @@
     "preset": "react-native"
   },
   "rnpm": {
-    "assets": ["./src/main/assets/fonts"]
+    "assets": [
+      "./src/main/assets/fonts"
+    ]
   }
 }
