--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-firebase/app": "^14.7.0",
+    "@react-native-firebase/auth": "^14.7.0",
+    "@react-native-google-signin/google-signin": "^7.2.2",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.2",
     "@react-navigation/stack": "^6.1.1",
+    "install": "^0.13.0",
+    "npm": "^8.5.5",
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-gesture-handler": "^2.3.2",
