--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-firebase/auth": "^14.7.0",
     "@react-native-google-signin/google-signin": "^7.2.2",
     "@react-navigation/bottom-tabs": "^6.2.0",
+    "@react-navigation/material-top-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.2",
     "@react-navigation/stack": "^6.1.1",
@@ -22,9 +23,11 @@
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-gesture-handler": "^2.3.2",
+    "react-native-pager-view": "^5.4.15",
     "react-native-paper": "^4.11.2",
     "react-native-safe-area-context": "^4.2.2",
     "react-native-screens": "^3.13.1",
+    "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.1.0"
   },
   "devDependencies": {
