post data (using axios and value!!-you should have values)

--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.2",
     "@react-navigation/stack": "^6.1.1",
+    "axios": "^0.26.1",
     "install": "^0.13.0",
     "npm": "^8.5.5",
     "react": "17.0.2",
+    "react-hook-form": "^7.29.0",
     "react-native": "0.67.2",
     "react-native-calendars": "^1.1282.0",
+    "react-native-form-component": "^2.3.3",
     "react-native-gesture-handler": "^2.3.2",
     "react-native-pager-view": "^5.4.15",
     "react-native-paper": "^4.11.2",
