--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -156,6 +156,7 @@ android {
     }
     buildTypes {
         debug {
+            manifestPlaceholders.cleartextTrafficPermitted="true"
             signingConfig signingConfigs.debug
             if (nativeArchitectures) {
                 ndk {
@@ -228,7 +229,7 @@ task copyDownloadableDepsToLibs(type: Copy) {
     into 'libs'
 }
 
-
+manifestPlaceholders = [usesCleartextTraffic:"true"]
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle");
 apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle") // add this line
