--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/stack": "^6.1.1",
     "axios": "^0.26.1",
     "install": "^0.13.0",
+    "moment": "^2.29.3",
     "npm": "^8.5.5",
     "react": "17.0.2",
     "react-hook-form": "^7.29.0",
