state management directory / absolute path setting

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,8 @@
 {
 "compilerOptions": {
-    "baseUrl":"HEALTHREACTNATIVE",
+    "baseUrl":"src",
 },
 "include": [
-    "HEALTHREACTNATIVE"
+    "src"
 ]
 }
